feat(transaction): add recent transaction component

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,4 +57,8 @@
     .form-message {
         @apply mt-2 text-12 text-red-500
     }
+
+    .category-badge {
+        @apply w-fit py-[2px] pl-1.5 pr-2 flex justify-center items-center gap-1 truncate border-[1.5px] rounded-2xl
+    }
 }
